# components/api-server/pkg/api/grpc/hypershell/v1/gateways.pb.go
@@ -43,6 +43,7 @@ type Gateway struct {
 	Route            *string                `protobuf:"bytes,17,opt,name=route,proto3,oneof" json:"route,omitempty"`
 	DatabaseConfig   *string                `protobuf:"bytes,18,opt,name=database_config,json=databaseConfig,proto3,oneof" json:"database_config,omitempty"`
 	CredentialDriver *string                `protobuf:"bytes,20,opt,name=credential_driver,json=credentialDriver,proto3,oneof" json:"credential_driver,omitempty"`
+	ConsoleAddress   *string                `protobuf:"bytes,21,opt,name=console_address,json=consoleAddress,proto3,oneof" json:"console_address,omitempty"`
 	unknownFields    protoimpl.UnknownFields
 	sizeCache        protoimpl.SizeCache
 }
@@ -213,6 +214,13 @@ func (x *Gateway) GetDatabaseConfig() string {
 func (x *Gateway) GetCredentialDriver() string {
 	if x != nil && x.CredentialDriver != nil {
 		return *x.CredentialDriver
+	}
+	return ""
+}
+
+func (x *Gateway) GetConsoleAddress() string {
+	if x != nil && x.ConsoleAddress != nil {
+		return *x.ConsoleAddress
 	}
 	return ""
 }
@@ -542,6 +550,7 @@ type UpdateGatewayRequest struct {
 	Route            *string                `protobuf:"bytes,17,opt,name=route,proto3,oneof" json:"route,omitempty"`
 	DatabaseConfig   *string                `protobuf:"bytes,18,opt,name=database_config,json=databaseConfig,proto3,oneof" json:"database_config,omitempty"`
 	CredentialDriver *string                `protobuf:"bytes,19,opt,name=credential_driver,json=credentialDriver,proto3,oneof" json:"credential_driver,omitempty"`
+	ConsoleAddress   *string                `protobuf:"bytes,20,opt,name=console_address,json=consoleAddress,proto3,oneof" json:"console_address,omitempty"`
 	unknownFields    protoimpl.UnknownFields
 	sizeCache        protoimpl.SizeCache
 }
@@ -705,6 +714,13 @@ func (x *UpdateGatewayRequest) GetDatabaseConfig() string {
 func (x *UpdateGatewayRequest) GetCredentialDriver() string {
 	if x != nil && x.CredentialDriver != nil {
 		return *x.CredentialDriver
+	}
+	return ""
+}
+
+func (x *UpdateGatewayRequest) GetConsoleAddress() string {
+	if x != nil && x.ConsoleAddress != nil {
+		return *x.ConsoleAddress
 	}
 	return ""
 }
@@ -1037,7 +1053,7 @@ var File_hypershell_v1_gateways_proto protoreflect.FileDescriptor
 
 const file_hypershell_v1_gateways_proto_rawDesc = "" +
 	"\n" +
-	"\x1chypershell/v1/gateways.proto\x12\rhypershell.v1\x1a\x1ahypershell/v1/common.proto\"\xfe\x06\n" +
+	"\x1chypershell/v1/gateways.proto\x12\rhypershell.v1\x1a\x1ahypershell/v1/common.proto\"\xc0\a\n" +
 	"\aGateway\x12:\n" +
 	"\bmetadata\x18\x01 \x01(\v2\x1e.hypershell.v1.ObjectReferenceR\bmetadata\x12\x12\n" +
 	"\x04name\x18\x02 \x01(\tR\x04name\x12\x19\n" +
@@ -1063,7 +1079,8 @@ const file_hypershell_v1_gateways_proto_rawDesc = "" +
 	"\x05route\x18\x11 \x01(\tH\tR\x05route\x88\x01\x01\x12,\n" +
 	"\x0fdatabase_config\x18\x12 \x01(\tH\n" +
 	"R\x0edatabaseConfig\x88\x01\x01\x120\n" +
-	"\x11credential_driver\x18\x14 \x01(\tH\vR\x10credentialDriver\x88\x01\x01B\x0f\n" +
+	"\x11credential_driver\x18\x14 \x01(\tH\vR\x10credentialDriver\x88\x01\x01\x12,\n" +
+	"\x0fconsole_address\x18\x15 \x01(\tH\fR\x0econsoleAddress\x88\x01\x01B\x0f\n" +
 	"\r_external_dnsB\v\n" +
 	"\t_tls_modeB\x0f\n" +
 	"\r_service_typeB\t\n" +
@@ -1075,7 +1092,8 @@ const file_hypershell_v1_gateways_proto_rawDesc = "" +
 	"\x05_oidcB\b\n" +
 	"\x06_routeB\x12\n" +
 	"\x10_database_configB\x14\n" +
-	"\x12_credential_driver\"\xf5\x05\n" +
+	"\x12_credential_driverB\x12\n" +
+	"\x10_console_address\"\xf5\x05\n" +
 	"\x14CreateGatewayRequest\x12\x12\n" +
 	"\x04name\x18\x01 \x01(\tR\x04name\x12\x19\n" +
 	"\bfleet_id\x18\x02 \x01(\tR\afleetId\x12\x1d\n" +
@@ -1115,7 +1133,7 @@ const file_hypershell_v1_gateways_proto_rawDesc = "" +
 	"\x11GetGatewayRequest\x12\x0e\n" +
 	"\x02id\x18\x01 \x01(\tR\x02id\"F\n" +
 	"\x12GetGatewayResponse\x120\n" +
-	"\agateway\x18\x01 \x01(\v2\x16.hypershell.v1.GatewayR\agateway\"\x9e\a\n" +
+	"\agateway\x18\x01 \x01(\v2\x16.hypershell.v1.GatewayR\agateway\"\xe0\a\n" +
 	"\x14UpdateGatewayRequest\x12\x0e\n" +
 	"\x02id\x18\x01 \x01(\tR\x02id\x12\x17\n" +
 	"\x04name\x18\x02 \x01(\tH\x00R\x04name\x88\x01\x01\x12\x1e\n" +
@@ -1140,7 +1158,8 @@ const file_hypershell_v1_gateways_proto_rawDesc = "" +
 	"\x04oidc\x18\x10 \x01(\tH\rR\x04oidc\x88\x01\x01\x12\x19\n" +
 	"\x05route\x18\x11 \x01(\tH\x0eR\x05route\x88\x01\x01\x12,\n" +
 	"\x0fdatabase_config\x18\x12 \x01(\tH\x0fR\x0edatabaseConfig\x88\x01\x01\x120\n" +
-	"\x11credential_driver\x18\x13 \x01(\tH\x10R\x10credentialDriver\x88\x01\x01B\a\n" +
+	"\x11credential_driver\x18\x13 \x01(\tH\x10R\x10credentialDriver\x88\x01\x01\x12,\n" +
+	"\x0fconsole_address\x18\x14 \x01(\tH\x11R\x0econsoleAddress\x88\x01\x01B\a\n" +
 	"\x05_nameB\v\n" +
 	"\t_fleet_idB\r\n" +
 	"\v_cluster_idB\r\n" +
@@ -1157,7 +1176,8 @@ const file_hypershell_v1_gateways_proto_rawDesc = "" +
 	"\x05_oidcB\b\n" +
 	"\x06_routeB\x12\n" +
 	"\x10_database_configB\x14\n" +
-	"\x12_credential_driver\"I\n" +
+	"\x12_credential_driverB\x12\n" +
+	"\x10_console_address\"I\n" +
 	"\x15UpdateGatewayResponse\x120\n" +
 	"\agateway\x18\x01 \x01(\v2\x16.hypershell.v1.GatewayR\agateway\"&\n" +
 	"\x14DeleteGatewayRequest\x12\x0e\n" +
