# components/api-server/plugins/gateways/migration.go
@@ -94,3 +94,20 @@ func migrationAddSupervisorImage() *gormigrate.Migration {
 		},
 	}
 }
+
+func migrationAddConsoleAddress() *gormigrate.Migration {
+	type Gateway struct {
+		db.Model
+		ConsoleAddress *string
+	}
+
+	return &gormigrate.Migration{
+		ID: "2026081112000006",
+		Migrate: func(tx *gorm.DB) error {
+			return tx.AutoMigrate(&Gateway{})
+		},
+		Rollback: func(tx *gorm.DB) error {
+			return tx.Migrator().DropColumn(&Gateway{}, "console_address")
+		},
+	}
+}
