# components/api-server/plugins/gateways/model.go
@@ -28,6 +28,7 @@ type Gateway struct {
 	SupervisorImage  *string `json:"supervisor_image"`
 	ServerDnsNames   *string `json:"server_dns_names" gorm:"type:jsonb"`
 	RouteAddress     *string `json:"route_address"`
+	ConsoleAddress   *string `json:"console_address"`
 	Oidc             *string `json:"oidc" gorm:"type:jsonb"`
 	Route            *string `json:"route" gorm:"type:jsonb"`
 	DatabaseConfig   *string `json:"database_config" gorm:"type:jsonb"`
@@ -71,6 +72,7 @@ type GatewayPatchRequest struct {
 	SupervisorImage  *string `json:"supervisor_image,omitempty"`
 	ServerDnsNames   *string `json:"server_dns_names,omitempty"`
 	RouteAddress     *string `json:"route_address,omitempty"`
+	ConsoleAddress   *string `json:"console_address,omitempty"`
 	Oidc             *string `json:"oidc,omitempty"`
 	Route            *string `json:"route,omitempty"`
 	DatabaseConfig   *string `json:"database_config,omitempty"`
