# components/sdk-go/types/gateway.go
@@ -1,6 +1,6 @@
 // Code generated by trex-sdk-generator from openapi.yaml - DO NOT EDIT.
-// Source: /home/mturansk/projects/src/github.com/openshift-online/hypershell/components/api-server/openapi/openapi.yaml
-// Spec SHA256: 300e25bd78ab5a10ddac513022a9b1cf8a214c26cfb75c3bd73b2d05e648508e
+// Source: /home/jsell/code/hypershell-3-openshell-console/components/api-server/openapi/openapi.yaml
+// Spec SHA256: c15ae16a60514570df1bfd9a70503b83f5e0f49d803de724eb26cacefde3ce03
 // Generated: 1970-01-01T00:00:00Z
 
 package types
@@ -14,6 +14,8 @@ type Gateway struct {
 	ObjectReference
 
 	ClusterID string `json:"cluster_id"`
+	ConsoleAddress string `json:"console_address,omitempty"`
+	CredentialDriver string `json:"credential_driver,omitempty"`
 	DatabaseConfig string `json:"database_config,omitempty"`
 	DatabaseID string `json:"database_id"`
 	ExternalDNS string `json:"external_dns,omitempty"`
@@ -58,6 +60,11 @@ func (b *GatewayBuilder) ClusterID(v string) *GatewayBuilder {
 	return b
 }
 
+func (b *GatewayBuilder) CredentialDriver(v string) *GatewayBuilder {
+	b.resource.CredentialDriver = v
+	return b
+}
+
 func (b *GatewayBuilder) DatabaseConfig(v string) *GatewayBuilder {
 	b.resource.DatabaseConfig = v
 	return b
@@ -85,11 +92,6 @@ func (b *GatewayBuilder) Image(v string) *GatewayBuilder {
 
 func (b *GatewayBuilder) Name(v string) *GatewayBuilder {
 	b.resource.Name = v
-	return b
-}
-
-func (b *GatewayBuilder) Oidc(v string) *GatewayBuilder {
-	b.resource.Oidc = v
 	return b
 }
 
@@ -170,6 +172,16 @@ func NewGatewayPatchBuilder() *GatewayPatchBuilder {
 
 func (b *GatewayPatchBuilder) ClusterID(v string) *GatewayPatchBuilder {
 	b.patch["cluster_id"] = v
+	return b
+}
+
+func (b *GatewayPatchBuilder) ConsoleAddress(v string) *GatewayPatchBuilder {
+	b.patch["console_address"] = v
+	return b
+}
+
+func (b *GatewayPatchBuilder) CredentialDriver(v string) *GatewayPatchBuilder {
+	b.patch["credential_driver"] = v
 	return b
 }
 
